# 0059bot

./: .env.example  .gitignore  .replit  Cargo.toml  PYROGRAM_SETUP.md  README.md  README_PAGES.md  TELEGRAM_PAGES_SETUP.md  app.js  bot.py  config.py  database.db  database.py  domino-bot.service  fly.toml  imp.php  index.html  nginx-domino.conf  performance_test.py  requirements.txt  style.css  test_cpx_postback.py  test_pages.html  test_pyrogram.py  test_ticker.py  test_timing.py  tonconnect-manifest.json  webserver.py
.github/workflows/: deploy.yml
handlers/: menu.py  start.py
src/: main.rs
static/: app.js  style.css
templates/: index.html
webapp/: admin_portal.html  app.js  index.html  page-check.js  portal-notification.js  referral.js  style.css  sw.js  ticker.js  tonconnect-manifest.json
webapp/assets/games/: crash.css  crash.html  crash.js
webapp/games/: crash.css  crash.html  crash.js  dice.css  dice.html  dice.js  slots.css  slots.html  slots.js
webapp/games/slots-engine/: engine.js
webapp/games/slots-engine/domino_v1/: engine-ui.js  index.html  ui.css
webapp/games/slotsgames/blackbeard/: game.html  index.html  vorn-control.js
webapp/games/slotsgames/blackbeard/js/: main.js
webapp/games/slotsgames/book/: game.js  index.html  style.css
webapp/games/slotsgames/bookofdomino/: bonus.js  game.js  index.html  math.js  style.css  symbols.js
webapp/games/slotsgames/classic777/: app.js  index.html  style.css
webapp/keyboard/: keyboard.css  keyboard.js
webapp/mining/: index.html  mining.css  mining.js
webapp/portal/: portal.css  portal.html  portal.js
webapp/portal/duels/: duels.css  duels.html  duels.js
webapp/portal/duels/chess/: chess.css  chess.html  chess.js
webapp/portal/duels/sudoku/: sudoku.css  sudoku.html  sudoku.js
webapp/portal/duels/tictactoe/: tictactoe.css  tictactoe.html  tictactoe.js
webapp/tasks/: index.html  safe_go.css  safe_go.html  style.css  tasks.js
