[package]
name = "domino_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "domino-bot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.3"
actix-files = "0.6"
actix-cors = "0.6"
actix-multipart = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "decimal"] }
rust_decimal = "1.33"
teloxide = { version = "0.12", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
url = "2.5"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
image = { version = "0.24", features = ["webp"] }
tokio-cron-scheduler = "0.9"
socketio = "0.4"
EOF